--- a/app/views/tools/_tool.html.erb
+++ b/app/views/tools/_tool.html.erb
@@ -2,16 +2,12 @@
 <li class="tool group ind">
   <div class="details">
     <div class="title">
-      <h4><%= link_to tool.name, tool %></h4>
+      <h4><% if tool.has_favicon? %><a href="<%= tool_path(tool) %>" class="favicon"><img src="<%= tool.full_favicon_url %>" /></a><% end %><%= link_to tool.name, tool %></h4>
       <ul class="count">
         <li class="sites"><a href="<%= tool_path(tool) %>"><em><%= tool.sites_count %></em> sites</a></li>
         <li class="links"><a href="<%= articles_tool_path(tool) %>"><em><%= tool.articles_count %></em>articles</a></li>
-        <!--
-        <li class="jobs"><a href="<%= jobs_tool_path(tool) %>"><em><%= tool.jobs_count %></em>jobs</a></li>
-        <li class="books"><a href="<%= books_tool_path(tool) %>"><em><%= tool.books_count %></em>books</a></li>
-        -->
       </ul>
-      <%= content_tag(:p, truncate(tool.description, :length => 140)) unless tool.description.blank? %>
+      <% if !tool.description.blank? %><p><%= truncate(tool.description, :length => 140) %></p><% end %>
     </div>
   
     <div class="content group">
