--- a/app/views/sites/_site.html.erb
+++ b/app/views/sites/_site.html.erb
@@ -2,7 +2,7 @@
 <li class="site group ind">
   <div class="details">
     <div class="title">
-      <h4><%= link_to site.title, site_path(site) %></h4>
+      <h4><% if site.has_favicon? %><a href="<%= site_path(site) %>" class="favicon"><img src="<%= site.full_favicon_url %>" /></a><% end %><%= link_to site.title, site_path(site) %></h4>
       <ul class="count">
         <li class="alexa"><span><em><%= number_with_delimiter(site.alexa_global_rank) %></em>Alexa</span></li>
         <li class="pagerank pagerank-<%= site.google_pagerank %>"><span><em><%= site.google_pagerank %></em>Pagerank</span></li>
