--- a/app/views/tools/_form.erb
+++ b/app/views/tools/_form.erb
@@ -1,5 +1,4 @@
 <%= semantic_form_for @tool, :format => params[:format], :html => { :multipart => true } do |f| %>
-  <% form = f %>
   <%= f.inputs do %>
     <%= f.input :url, :as => :string, :required => true, :label => "Unique URL for this Tool", :hint => "Definite source for this tool." %>
     <%= f.input :name, :as => :string, :required => true, :label => "Tool Name", :hint => "Just the name here." %>
@@ -9,6 +8,7 @@
                 :collection => Category.order(:name), :hint => "Is this tool a database? A framework? A web service?" %>
     <%= f.input :description, :as => :text, :required => false, :input_html => { :rows => 5 },
                 :hint => "Few words about this tool. There's no limit here, so give as much info as you want." %>
+    <%= f.input :favicon_url, :as => :hidden, :required => false %>
   <% end %>
   <%= f.buttons do %>
     <%= f.commit_button %>
