Updated favicons and links to use their own tables

--- a/app/views/site_tools/manage.html.erb
+++ b/app/views/site_tools/manage.html.erb
@@ -6,5 +6,10 @@
 </section>
 
 <sidebar>
-  <aside>test</aside>
+  <aside>
+    <h3>Related Links</h3>
+    <ul>
+      <li><%= link_to "Main Page for #{@site.title}", @site %></li>
+    </ul>
+  </aside>
 </sidebar>
