--- a/app/views/usings/_using_site.html.erb
+++ b/app/views/usings/_using_site.html.erb
@@ -16,6 +16,7 @@
           <% end %>
         </ul>
       <% end %>
+      <%= link_to "comments", site_tool_path(using_site.site, @tool) %>
     </div>
   </div>
 </li>
