--- a/app/views/usings/_using_tool.html.erb
+++ b/app/views/usings/_using_tool.html.erb
@@ -11,6 +11,7 @@
       <ul class="using">
         <%= raw tool_categories(using_tool.tool) %>
       </ul>
+      <%= link_to "comments", site_tool_path(@site, using_tool.tool) %>
     </div>
   </div>
 </li>
