Clearing up how usings are shown

--- a/app/stylesheets/layout.scss
+++ b/app/stylesheets/layout.scss
@@ -35,7 +35,7 @@ section, aside { display:block; }
 body.popup #content { width:550px; }
 #content_with_nav { width:670px; float:left; min-height:500px; margin-left:-1px; }
 #content_with_nav.no_sidebar { margin-left:4px; }
-.main section { padding:1em; }
+.main section { padding:.4em; }
 
 /* Right sidebar */
 sidebar { width:260px; float:right;}
