--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -116,7 +116,7 @@ body.popup #content {
   margin-left: 4px; }
 
 .main section {
-  padding: 1em; }
+  padding: .4em; }
 
 /* Right sidebar */
 sidebar {
