--- a/app/stylesheets/lists.scss
+++ b/app/stylesheets/lists.scss
@@ -10,7 +10,7 @@ ul.categories, ul.sites, ul.tools, ul.usings { list-style:none; margin:1em; min-
 .ind { border-top:1px solid #ccc; padding:1em 0; }
 .ind:hover { background-color:#efefef; }
 div.ind:hover { background-color:#fff; }
-div.ind { border:none; margin: .2em 1em 2em 1em; }
+div.ind { border:none; margin: .2em 1em 1em 1em; }
 div.ind h2 { width:640px; float:left; }
 .ind a.screenshot { float:left; margin-right:24px; width:110px; height:100px; max-width:110px; max-height:100px; }
 .ind a.screenshot img { max-height:95px; max-width:120px;}
@@ -32,8 +32,8 @@ a.favicon { width:16px; height:16px; float:left; padding-right:8px; }
 a.favicon img { margin:0; width:16px; height:16px; }
 
 
-ul.usings li.ind .title h4, ul.sites li.ind .title h4 { width:590px; }
-
+ul.sites li.ind .title h4 { width:590px; }
+ul.usings li.ind .title h4 { width:300px; }
 
 /* sites#show, tools#show */ 
 section.tool .details, section.site .details { }
@@ -45,7 +45,6 @@ section.tab ul.tools a.screenshot, section.tab ul.tools a.screenshot img,
 section.tab ul.sites a.screenshot, section.tab ul.sites a.screenshot img { max-height:95px; max-width:120px; }
 section.tab ul.tools .details, section.tab ul.sites .details { margin-left:140px; min-height:88px; }
 section.tab ul.usings div.details, ul.usings div.details, ul.sites div.details, ul.tools div.details { margin-left:0; min-height:0; padding:0 1.5em; }
-
 
 
 /* tools#index, sites#show */
@@ -86,3 +85,25 @@ ul.count li.pagerank { background-color:green; }
 ul.count li { margin:0; position: relative;	 }
 ul.count li span, ul.count li a { display: block; padding: 7px; z-index: 2; font-size:1.1em; }
 ul.count li em { float: right; font-style:normal; font-weight:bold; padding-left:12px; }
+
+
+/* Usings */
+ul.usings li.ind { padding: .8em .8em .6em; }
+ul.usings li.ind .title { margin-left:0; min-height:0px; }
+ul.usings li.ind .title h4 { float:left; font-size:1.6em; margin:0; padding:.3em 0; width:auto; }
+ul.usings li.ind h4 span.url { display:none; font-size:.8em; color:#888; }
+ul.usings li.ind:hover h4 span.url { display:inline; margin-left:1em; }
+ul.usings li.ind h4 img.favicon { margin:0 .5em 0 0; }
+ul.usings li.ind a.comments { float:right; display:none; }
+ul.usings li.ind:hover a.comments { display:block; }
+ul.usings li.ind ul.tools, ul.usings li.ind ul.categories { min-height:0; margin:0; min-width:400px; float:right; position:relative;}
+ul.usings li.ind ul.tools li, ul.usings li.ind ul.categories li { float:right;}
+ul.usings li.ind ul.tools li a, ul.usings li.ind ul.categories li a { margin:0 0 0 .4em; }
+ul.usings li.ind ul.tools li a.comments, ul.usings li.ind ul.categories li a.comments { background-color:#ff0; }
+ul.usings li.ind ul.tools li a.comments:hover, ul.usings li.ind ul.categories li a.comments:hover { background-color:#dddd11; }
+ul.usings li.ind p { padding-top:.4em; }
+ul.usings li.ind:hover p a.manage_site_tools { display:block; float:right; }
+ul.usings li.ind p a.manage_site_tools { display:none; }
+
+
+ul.sites.single li.ind:last-child, ul.usings.single li.ind:last-child { border-top:none; border-bottom:1px solid #ccc; }
