--- a/app/views/shared/_disqus.html.erb
+++ b/app/views/shared/_disqus.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="disqus_wrapper">
   <div id="disqus_thread"></div>
   <script type="text/javascript">
       var disqus_shortname = 'lineofthought';
