--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -68,7 +68,7 @@ ul.tabs {
   padding: 0 20px;
   border-bottom: 1px solid #a3a09e;
   clear: both;
-  margin: 0px 0 20px; }
+  margin: 0; }
 
 ul.tabs li {
   margin: 0;
@@ -209,3 +209,7 @@ ul.tabs a.users:hover {
 
 *:first-child + html .pagination {
   overflow: hidden; }
+
+div.disqus_wrapper {
+  padding: 1em;
+  font-size: 1.4em; }
